refs function #11914 design-static-pages

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -6,6 +6,7 @@ en:
       confirmed: "Your email address has been successfully confirmed."
       send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      resend_title: "Resend confirmation instructions"
     failure:
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
@@ -17,26 +18,59 @@ en:
       unauthenticated: "You need to sign in or sign up before continuing."
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
+      welcome: "Welcome"
+      p_confirm: "You can confirm your account email through the link below:"
+      a_confirm: "Confirm my account"
       confirmation_instructions:
         subject: "Confirmation instructions"
       reset_password_instructions:
         subject: "Reset password instructions"
+        p.hello: "Hello"
+        p.request: "Someone has requested a link to change your password. You can do this through the link below."
+        p.warn1: "If you didn't request this, please ignore this email."
+        p.warn2: "Your password won't change until you access the link above and create a new one."
       unlock_instructions:
         subject: "Unlock instructions"
+        p_hello: "Hello"
+        p_lock: "Your account has been locked due to an excessive number of unsuccessful sign in attempts."
+        p_click: "Click the link below to unlock your account:"
+        a_unlock: "Unlock my account"
       email_changed:
         subject: "Email Changed"
+        p_hello: "Hello"
+        p_is_being_changed: "We're contacting you to notify you that your email is being changed to "
+        p_has_been_changed: "We're contacting you to notify you that your email has been changed to "
       password_change:
         subject: "Password Changed"
+        p_hello: "Hello"
+        p_contact: "We're contacting you to notify you that your password has been changed."
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
+      failure: 'Could not authenticate you from %{kind} because "%{reason}".'
       success: "Successfully authenticated from %{kind} account."
     passwords:
+      edit:
+        h2_title: Change your password
+        l_new_password: New password
+        l_confirm: Confirm new password
+        submit_change_password: Change my password
+      new:
+        h2_title: Forgot your password?
+        submit_send_request: Send me reset password instructions
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
       send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
       updated: "Your password has been changed successfully. You are now signed in."
       updated_not_active: "Your password has been changed successfully."
     registrations:
+      edit:
+        h2_edit: Edit
+        h3_cancel: Cancel my account
+        p_unhappy: Unhappy?
+        btn_cancel: Cancel my account
+        a_back: Back
+      new:
+        h2_signup: Sign up
+        submit_signup: Sign up
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
@@ -46,13 +80,27 @@ en:
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again"
     sessions:
+      new:
+        h2_login: Log in
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
+      login: "Log in"
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
+      new:
+        h2_title: Resend unlock instructions
+        btn_submit: Resend unlock instructions
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+    shared:
+      links:
+        a_login: Log in
+        a_signup: Sign up
+        a_forgor_password: Forgot your password?
+        a_confirmable: Didn't receive confirmation instructions?
+        a_lockable: Didn't receive unlock instructions?
+        a_omniauthable: Sign in with
   errors:
     messages:
       already_confirmed: "was already confirmed, please try signing in"
